tests/NormalTests/paczka1/fuzzy1/77817790.err
Error in line 12: 8upyZ A384 7,3
Error in line 26: 8upyZ A150 35,0
Error in line 27: 8upyZ A384 15,3
Error in line 31: A384 S200 57,4
